# JobTracker

./: .editorconfig  .gitattributes  .gitignore  README.md  Start-JobTracker.bat  Start-JobTracker.ps1  alembic.ini  jobtracker.db  pyproject.toml
.claude/: settings.json  settings.local.json
alembic/: env.py
alembic/versions/: 20260418_0001_initial_schema.py  20260419_0002_add_job_scores.py  20260419_0003_add_company_discovery_tables.py
config/: company_discovery.yaml  profile.yaml  scoring.yaml  search_terms.yaml  sources.yaml
config/data/: austin_ecosystem.json  company_directory.json
docs/: company-discovery-design.md  discovery-sources.md  package-boundaries.md  refactor-checkpoint.md  testing.md  v1-architecture.md  v1-roadmap.md  workflow-review-checklist.md  workflow.md
src/jobtracker/: __init__.py  __main__.py  logging.py
tests/: conftest.py  test_cli.py  test_discovery_cli.py  test_import_boundaries.py  test_job_search_cli.py  test_launcher_scripts.py  test_legacy_imports.py  test_reporting_cli.py  test_sources_cli.py
tests/company_discovery/: test_directory_adapter.py  test_discovery_models.py  test_discovery_repositories.py  test_discovery_runner.py  test_ecosystem_adapter.py  test_fingerprinting.py  test_hn_adapter.py  test_promotion_workflow.py  test_remoteok_adapter.py  test_resolution_repository.py  test_resolver.py  test_scoring.py  test_search_adapter.py
tests/config/: test_loader.py
tests/fixtures/: ashby_jobs.json  austin_ecosystem_entries.json  brave_search_empty.json  brave_search_malformed.json  brave_search_success.json  (+7 more)
(+102 files in other folders)
