[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobtracker"
version = "0.1.0"
description = "Local-first job opportunity tracker for Austin and remote roles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.13,<3.0",
  "typer>=0.24,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10.0",
]

[project.scripts]
jobtracker = "jobtracker.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
